# glfw-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  Config.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  LoadingState.cpp  LoadingState.hpp  OpenCraft.cpp  OpenCraft.hpp  Skeleton.cpp  Skeleton.hpp  State.cpp  State.hpp  StateManager.hpp  UiState.cpp  UiState.hpp  Window.cpp  Window.hpp  main.cpp
src/shaders/: 2dcolor.vert  loading.frag  loading.vert
src/util/: imgui_glfw.cpp  imgui_glfw.h
